<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@drawable/emotionix_login"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"

        android:gravity="center"
        android:text="@string/register"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textSize="15sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"

            android:textSize="15sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
<ProgressBar
    android:id="@+id/progressBar"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:backgroundTint="#F8779C"
        android:text="@string/register"
        android:layout_marginTop="25dp"
        android:textSize="35sp"
        android:textStyle="bold" />
<TextView
    android:textStyle="bold"
    android:textSize="35sp"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:id="@+id/loginNow"
    android:text="@string/click_to_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</LinearLayout>