<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/menu"
    android:textAlignment="center"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="#112B6C"
        android:shape="rectangle"
        android:text="@string/more_about_us"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F4EFEF"
        android:textSize="34sp"
        tools:text="@string/more_about_us" />

    <Button
        android:id="@+id/button4"
        android:layout_width="370dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:backgroundTint="#112B6C"
        android:clickable="true"
        android:onClick="ourteam"
        android:text="OUR TEAM"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FBF6F6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="370dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="250dp"
        android:layout_weight="1"
        android:backgroundTint="#112B6C"
        android:clickable="true"
        android:shape="rectangle"
        android:text="REMIND ME"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FBF6F6"
        android:textSize="34sp"
        tools:text="Remind me " />
    <Button
        android:id="@+id/date_picker"
        android:layout_width="370dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="352dp"
        android:backgroundTint="#112B6C"
        android:clickable="true"
        android:text="@string/calender"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FBF6F6" />

    <TextView
        android:id="@+id/user_details"
        android:layout_width="370dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:background="#697C8A"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="370dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="540dp"
        android:layout_weight="1"
        android:backgroundTint="#112B6C"
        android:clickable="true"
        android:shape="rectangle"
        android:text="@string/log_out"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FBF6F6"
        android:textSize="34sp" />
    <Button
        android:id="@+id/alertbutton"
        android:layout_width="370dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="640dp"
        android:layout_weight="1"
        android:backgroundTint="#112B6C"
        android:clickable="true"
        android:shape="rectangle"
        android:text="@string/close"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FBF6F6"
        android:textSize="34sp" />

</RelativeLayout>